gap and width for align button on 768 img aside fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -39,6 +39,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+    border: 1px solid red;
 }
 
 body{
@@ -544,6 +545,10 @@ input[type='color']::-webkit-color-swatch {
 
 @media screen and (max-width: 768px)    {
 
+    body {
+        overflow: hidden;
+    }
+
     .close_panel_control    {
         display: block;
         padding: 3px;
@@ -553,16 +558,22 @@ input[type='color']::-webkit-color-swatch {
         font-size: 15px;
         float: right;
         margin-right: 10px;
-        /* margin-left: 205px; */
         margin-top: 10px;
     }
 
+    /*ASIDE IMG*/
+
+    .aside_img_container    {
+        gap: 5px;
+    }
+
     .panel_control_input    {
-        width: 90%;
+        width: 100%;
+        margin-right: -20px;
     }
 
     .section_central    {
-        margin-top: 20px;
+        margin-top: 0px;
     }
 
     #aside_section_img{
@@ -577,8 +588,18 @@ input[type='color']::-webkit-color-swatch {
         margin-left: 20px;
     }
 
+    .reset_filters_button   {
+        margin-top: 5px;
+    }
+
+    /*ASIDE TEXT*/
+
+    .aside_text_container   {
+        gap: 15px;
+    }
+
     .button_align   {
-        width: 24px;
+        width: 20px;
     }
 
     .non_outline,
@@ -594,7 +615,7 @@ input[type='color']::-webkit-color-swatch {
     }
 
     .button_download    {
-        margin-top: 25px;
+        margin-top: 19px;
     }
   
 }
